<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black" />
        <item
            android:id="@+id/nav_avail_status"
            android:title="@string/avail_status"
            android:icon="@drawable/ic_checked"/>
        <item
            android:id="@+id/nav_pending_consult"
            android:title="@string/pending_consult"
            android:icon="@drawable/ic_pending"
            app:actionLayout="@layout/drawer_counter" />
        <item
            android:id="@+id/nav_my_clients"
            android:title="@string/my_clients"
            android:icon="@drawable/ic_my_client"
            app:actionLayout="@layout/drawer_counter" />
        <item
            android:id="@+id/nav_update_case_notes"
            android:title="@string/update_case_notes"
            android:icon="@drawable/ic_note_add_case_notes" />
    </group>

    <!--<group android:checkableBehavior="single">
        <item android:title="My Activities">
            <menu>
                <item
                    android:id="@+id/nav_meetings"
                    android:title="@string/meetings" />
                <item
                    android:id="@+id/nav_calls"
                    android:title="@string/calls" />
                <item
                    android:id="@+id/nav_tasks"
                    android:title="@string/tasks" />
            </menu>
        </item>
    </group>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>
