<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.hammadhanif.availabilityapplication.CaseSearch">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/case_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCaseSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/csearch"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/txtInLayoutName"
                app:layout_constraintEnd_toEndOf="@+id/tvCaseSearch"
                app:layout_constraintStart_toStartOf="@+id/tvCaseSearch"
                app:layout_constraintTop_toBottomOf="@id/tvCaseSearch" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInLayoutName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/txtInLayoutPNumber"
                app:layout_constraintEnd_toEndOf="@id/tvCaseSearch"
                app:layout_constraintStart_toStartOf="@id/tvCaseSearch"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clname"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInLayoutPNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/txtInLayoutCsName"
                app:layout_constraintEnd_toEndOf="@id/tvCaseSearch"
                app:layout_constraintStart_toStartOf="@id/tvCaseSearch"
                app:layout_constraintTop_toBottomOf="@id/txtInLayoutName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clphone"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInLayoutCsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/txtInLayoutDNumber"
                app:layout_constraintEnd_toEndOf="@id/tvCaseSearch"
                app:layout_constraintStart_toStartOf="@id/tvCaseSearch"
                app:layout_constraintTop_toBottomOf="@id/txtInLayoutPNumber">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/csname"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInLayoutDNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/btnSearchCase"
                app:layout_constraintEnd_toEndOf="@id/tvCaseSearch"
                app:layout_constraintStart_toStartOf="@id/tvCaseSearch"
                app:layout_constraintTop_toBottomOf="@id/txtInLayoutCsName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDocketNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dcnumber"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSearchCase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_shadow_main"
                android:text="@string/search"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtInLayoutDNumber" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
